# ARCHETYPE-FULLASSEMBLY

./: .gitignore  Cargo.toml
Assets/: DeviceItemPrefab.prefab  TestModelCreation.cs  TestVisualization.cs
Assets/Scenes/: MainScene.unity
Assets/Scripts/Backend/: Backend.asmdef  BackendInterface.cs  GPUAPI.cs  GPUSettingsManager.cs  ModelAPI.cs  PluginAPI.cs  RustInterface.cs  TrainingAPI.cs  WebSocketManager.cs
Assets/Scripts/GPU/: GPUManager.cs
Assets/Scripts/Plugins/: PluginManager.cs  Plugins.asmdef
Assets/Scripts/Plugins/core/: CNNPlugin.cs  MLPPlugin.cs  RNNPlugin.cs
Assets/Scripts/UI/: GPUSettingsPanel.cs  MainHUDController.cs
Assets/Scripts/Visualization/: CameraController.cs  ConnectionRenderer.cs  LayerVisualization.cs  NetworkRenderer.cs  NetworkVisualization.cs  NeuralNetworkVisualizer.cs  NodeVisualization.cs  PerformanceMonitor.cs  Visualization.asmdef
Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
Assets/UI Toolkit/: MainHUD.uxml  Styles.css
Backend/: main.py  requirements.txt
Backend/models/: schemas.py
Backend/src/: __init__.py
Backend/src/api/: __init__.py
Backend/src/api/endpoints/: __init__.py  gpu.py  health.py  models.py  plugins.py  training.py
Backend/src/core/: __init__.py  gpu_manager.py  model_factory.py  temp_monitor.py  training_engine.py
Backend/src/plugins/: __init__.py  plugin_manager.py
Backend/src/plugins/core/: __init__.py  cnn_plugin.py  mlp_plugin.py  rnn_plugin.py
Backend/src/utils/: __init__.py  config.py  gpu_config.json  logging_config.py  websocket_manager.py
ProjectSettings/: ProjectSettings.asset
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_state.rs  main.rs
