
[package]
name = "archetype"
version = "1.0.0"
description = "Professional neural network design and training tool"
authors = ["Archetype Development Team"]
license = "MIT"
edition = "2021"

# Optimize for performance in release builds
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[profile.dev]
opt-level = 1

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Tauri core dependencies
tauri = { version = "2.0", features = [
  "protocol-asset",
  "native-tls-vendored", 
  "devtools",
  "tray-icon",
  "image-ico",
  "image-png"
] }
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-window = "2.0"
tauri-plugin-process = "2.0"

# HTTP server for Unity communication (NEW ADDITION)
warp = "0.3"
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# GPU and graphics
wgpu = "0.19"
pollster = "0.3"

# System information
sysinfo = "0.30"

# GPU monitoring (optional, for NVIDIA systems)
nvml-wrapper = { version = "0.10", optional = true }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
walkdir = "2.4"

# Configuration management
config = "0.14"

# Plugin system
libloading = "0.8"
dlopen2 = "0.7"

# HTTP client for ML backend communication
reqwest = { version = "0.11", features = ["json", "stream"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
  "Win32_Foundation",
  "Win32_System_SystemInformation",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Direct3D11"
] }

[target.'cfg(target_os = "linux")'.dependencies]
# Linux-specific GPU detection
pciutils = { version = "0.2", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
# macOS-specific system information
core-foundation = "0.9"
core-graphics = "0.23"

[features]
default = ["nvidia-support"]

# GPU vendor support
nvidia-support = ["nvml-wrapper"]
intel-support = []
amd-support = []

# Platform features
headless = ["warp"]
performance-profiling = []
linux-gpu-detection = ["pciutils"]

# Development features
devtools = []

# Plugin development
plugin-dev = ["libloading", "dlopen2"]